--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "jest-pnp-resolver": "1.0.1",
     "jest-resolve": "23.6.0",
     "mini-css-extract-plugin": "0.4.3",
+    "react-moment": "^0.8.4",
+    "moment-timezone": "^0.5.23",
     "node-sass": "^4.10.0",
     "ol": "^5.3.0",
     "ol-layerswitcher": "^3.2.0",
