--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
     "jest-pnp-resolver": "1.0.1",
     "jest-resolve": "23.6.0",
     "mini-css-extract-plugin": "0.4.3",
-    "react-moment": "^0.8.4",
     "moment-timezone": "^0.5.23",
     "node-sass": "^4.10.0",
     "ol": "^5.3.0",
@@ -51,6 +50,8 @@
     "react-dev-utils": "^6.1.1",
     "react-dom": "^16.6.3",
     "react-icons": "^3.2.2",
+    "react-image-gallery": "^0.8.12",
+    "react-moment": "^0.8.4",
     "react-router-dom": "^4.3.1",
     "resolve": "1.8.1",
     "sass-loader": "7.1.0",
