change size of images for slideshow and use different slideshow wiht lazy loading feature

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@svgr/webpack": "2.4.1",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "9.0.0",
-    "babel-jest": "23.6.0",
+    "babel-jest": "^24.1.0",
     "babel-loader": "8.0.4",
     "babel-plugin-named-asset-import": "^0.2.3",
     "babel-preset-react-app": "^6.1.0",
@@ -31,9 +31,10 @@
     "fs-extra": "7.0.0",
     "html-webpack-plugin": "4.0.0-alpha.2",
     "identity-obj-proxy": "3.0.0",
-    "jest": "23.6.0",
+    "jest": "^24.1.0",
     "jest-pnp-resolver": "1.0.1",
     "jest-resolve": "23.6.0",
+    "jquery": "^3.3.1",
     "mini-css-extract-plugin": "0.4.3",
     "moment-timezone": "^0.5.23",
     "node-sass": "^4.10.0",
@@ -50,11 +51,12 @@
     "react-dev-utils": "^6.1.1",
     "react-dom": "^16.6.3",
     "react-icons": "^3.2.2",
-    "react-image-gallery": "^0.8.12",
     "react-moment": "^0.8.4",
     "react-router-dom": "^4.3.1",
+    "react-slick": "^0.23.2",
     "resolve": "1.8.1",
     "sass-loader": "7.1.0",
+    "slick-carousel": "^1.8.1",
     "style-loader": "0.23.0",
     "terser-webpack-plugin": "1.1.0",
     "url-loader": "1.1.1",
