--- a/playmobox.config.json
+++ b/playmobox.config.json
@@ -5,6 +5,5 @@
     "app": 3000,
     "terminal": 4000
   },
-  "path": "/home/app/my-playmobox",
-  "cmd": "npm start --prefix /home/app/my-playmobox"
+  "path": "/home/app/my-playmobox"
 }
